Fixed z-indexes

--- a/src/components/slider/slider.module.scss
+++ b/src/components/slider/slider.module.scss
@@ -1,6 +1,6 @@
 .slider {
     border-radius: 10px;
-    z-index: 10;
+    z-index: 5;
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 50px;
